# kis-auto-trading-system2

./: README.md  pyproject.toml  requirements.txt
src/kis_auto_trader/: __init__.py  broker.py  config.py  main.py  risk.py  strategy.py  trader.py
tests/: test_strategy.py
